--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,11 +1,22 @@
 {$DOMAIN} {
-    encode zstd gzip
+    # Automatic HTTPS via Let's Encrypt
     tls {$EMAIL}
+
+    # Security headers
     header {
+        # Enable HSTS
         Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
+        # Prevent clickjacking
+        X-Frame-Options "SAMEORIGIN"
+        # Prevent MIME sniffing
         X-Content-Type-Options "nosniff"
-        X-Frame-Options "DENY"
-        Referrer-Policy "no-referrer-when-downgrade"
+        # Remove Server header
+        -Server
     }
-    reverse_proxy ntfy:{$NTFY_HTTP_PORT}
+
+    # Reverse proxy to ntfy
+    reverse_proxy ntfy:80 {
+        # Pass real IP to ntfy for rate limiting
+        header_up X-Real-IP {remote_host}
+    }
 }
