Remove unused configuration options from .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,56 +1,31 @@
 # Domain and Email Configuration
-# REQUIRED: Update these with your actual domain and email
 DOMAIN=notify.example.com
 EMAIL=admin@example.com
 
-# ntfy Base URL (must match DOMAIN with https://)
+# ntfy Base URL
 NTFY_BASE_URL=https://notify.example.com
 
-# SMTP Configuration (for sending email notifications)
+# Timezone
+TZ=UTC
+
+
+# OPTIONAL: SMTP Configuration
 # Set these to enable email notifications from ntfy
 # Example for Gmail:
 #   SMTP_SENDER_ADDR=smtp.gmail.com:587
 #   SMTP_SENDER_FROM=ntfy@example.com
 #   SMTP_SENDER_USER=your-email@gmail.com
 #   SMTP_SENDER_PASS=your-app-password
+
 SMTP_SENDER_ADDR=
 SMTP_SENDER_FROM=ntfy@example.com
 SMTP_SENDER_USER=
 SMTP_SENDER_PASS=
 
-# Cache and Storage Settings
-NTFY_CACHE_FILE=/var/lib/ntfy/cache.db
-NTFY_ATTACHMENT_CACHE_DIR=/var/lib/ntfy/attachments
-
-# Attachment Limits
-NTFY_ATTACHMENT_TOTAL_SIZE_LIMIT=5G
-NTFY_ATTACHMENT_FILE_SIZE_LIMIT=15M
-NTFY_ATTACHMENT_EXPIRY_DURATION=3h
-
-# Message Cache Settings
-NTFY_CACHE_DURATION=12h
-NTFY_KEEPALIVE_INTERVAL=45s
-
-# Auth Settings
-NTFY_AUTH_FILE=/var/lib/ntfy/users.db
-NTFY_AUTH_DEFAULT_ACCESS=deny-all
-
-# Behind Proxy Settings
-NTFY_BEHIND_PROXY=true
-
-# Visitor Limits (proxy-aware rate limiting)
-# These limits apply per visitor IP (not the proxy IP)
-NTFY_VISITOR_SUBSCRIPTION_LIMIT=30
-NTFY_VISITOR_REQUEST_LIMIT_BURST=60
-NTFY_VISITOR_REQUEST_LIMIT_REPLENISH=5s
-NTFY_VISITOR_MESSAGE_DAILY_LIMIT=0
-
-# Web Push (optional, leave empty to disable)
+# Web Push (Optional - Advanced)
 # Generate keys with: docker exec -it ntfy ntfy webpush keys
+
 # NTFY_WEB_PUSH_PUBLIC_KEY=
 # NTFY_WEB_PUSH_PRIVATE_KEY=
 # NTFY_WEB_PUSH_FILE=/var/lib/ntfy/webpush.db
 # NTFY_WEB_PUSH_EMAIL_ADDRESS=
-
-# Timezone
-TZ=UTC
