--- a/compose.yml
+++ b/compose.yml
@@ -5,13 +5,26 @@ services:
     restart: unless-stopped
     command: serve
     environment:
-      - TZ=UTC
+      # Deployment-specific settings
+      - TZ=${TZ:-UTC}
+      - NTFY_BASE_URL=${NTFY_BASE_URL}
+      # SMTP Configuration (sensitive)
+      - NTFY_SMTP_SENDER_ADDR=${SMTP_SENDER_ADDR}
+      - NTFY_SMTP_SENDER_FROM=${SMTP_SENDER_FROM}
+      - NTFY_SMTP_SENDER_USER=${SMTP_SENDER_USER}
+      - NTFY_SMTP_SENDER_PASS=${SMTP_SENDER_PASS}
+      # Web Push Configuration (sensitive)
+      - NTFY_WEB_PUSH_PUBLIC_KEY=${NTFY_WEB_PUSH_PUBLIC_KEY}
+      - NTFY_WEB_PUSH_PRIVATE_KEY=${NTFY_WEB_PUSH_PRIVATE_KEY}
+      - NTFY_WEB_PUSH_FILE=${NTFY_WEB_PUSH_FILE}
+      - NTFY_WEB_PUSH_EMAIL_ADDRESS=${NTFY_WEB_PUSH_EMAIL_ADDRESS}
     volumes:
       - ./ntfy/server.yml:/etc/ntfy/server.yml:ro
       - ntfy-cache:/var/cache/ntfy
       - ntfy-data:/var/lib/ntfy
     networks:
       - ntfy-network
+    # Bind to localhost only - Caddy will proxy
     ports:
       - "127.0.0.1:2586:80"
 
